--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 10:56]
+#+CAPTION: Clock summary at [2019-03-19 Tue 11:22]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *55:56* |       |       | 100.0 |
+| *Total time*                                             | *56:20* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 55:56   |       |       | 100.0 |
-| Active                                                   |         | 55:56 |       | 100.0 |
+| Stories                                                  | 56:20   |       |       | 100.0 |
+| Active                                                   |         | 56:20 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.2 |
-| Sprint and product backlog grooming                      |         |       |  6:43 |  12.0 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   6.8 |
+| Sprint and product backlog grooming                      |         |       |  6:43 |  11.9 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   6.7 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.3 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.3 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  11.5 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.2 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  11.4 |
 | Empty directories should be deleted                      |         |       |  5:37 |  10.0 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.1 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   4.8 |
-| Code generation of tests for dogen models                |         |       | 20:31 |  36.7 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.0 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   4.7 |
+| Code generation of tests for dogen models                |         |       | 20:55 |  37.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,8 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 11:13]--[2019-03-19 Tue 11:22] =>  0:09
+    CLOCK: [2019-03-19 Tue 10:57]--[2019-03-19 Tue 11:12] =>  0:15
     CLOCK: [2019-03-19 Tue 09:54]--[2019-03-19 Tue 10:56] =>  1:02
     CLOCK: [2019-03-19 Tue 09:28]--[2019-03-19 Tue 09:53] =>  0:25
     CLOCK: [2019-03-19 Tue 09:14]--[2019-03-19 Tue 09:27] =>  0:13
