--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,18 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-26 Tue 06:52]
-| <75>                                                   |        |      |      |       |
-| Headline                                               | Time   |      |      |     % |
-|--------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                           | *7:15* |      |      | 100.0 |
-|--------------------------------------------------------+--------+------+------+-------|
-| Stories                                                | 7:15   |      |      | 100.0 |
-| Active                                                 |        | 7:15 |      | 100.0 |
-| Edit release notes for previous sprint                 |        |      | 1:47 |  24.6 |
-| Sprint and product backlog grooming                    |        |      | 0:46 |  10.6 |
-| Create a video demo for the previous sprint's features |        |      | 3:11 |  43.9 |
-| Promote extraction entities to meta-model elements     |        |      | 1:31 |  20.9 |
+#+CAPTION: Clock summary at [2019-03-26 Tue 11:48]
+| <75>                                                                        |        |      |      |       |
+| Headline                                                                    | Time   |      |      |     % |
+|-----------------------------------------------------------------------------+--------+------+------+-------|
+| *Total time*                                                                | *9:57* |      |      | 100.0 |
+|-----------------------------------------------------------------------------+--------+------+------+-------|
+| Stories                                                                     | 9:57   |      |      | 100.0 |
+| Active                                                                      |        | 9:57 |      | 100.0 |
+| Edit release notes for previous sprint                                      |        |      | 1:47 |  17.9 |
+| Sprint and product backlog grooming                                         |        |      | 0:46 |   7.7 |
+| Create a video demo for the previous sprint's features                      |        |      | 3:11 |  32.0 |
+| Fix issues with emacs                                                       |        |      | 2:42 |  27.1 |
+| Promote extraction entities to meta-model elements                          |        |      | 1:31 |  15.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -157,13 +158,30 @@ Updates to sprint and product backlog.
 
 Demo the delete empty directories feature.
 
+*** COMPLETED Fix issues with emacs                                   :story:
+    CLOSED: [2019-03-26 Tue 10:48]
+    :LOGBOOK:
+    CLOCK: [2019-03-26 Tue 11:31]--[2019-03-26 Tue 11:48] =>  0:17
+    CLOCK: [2019-03-26 Tue 11:18]--[2019-03-26 Tue 11:30] =>  0:12
+    CLOCK: [2019-03-26 Tue 11:06]--[2019-03-26 Tue 11:17] =>  0:11
+    CLOCK: [2019-03-26 Tue 10:49]--[2019-03-26 Tue 11:05] =>  0:16
+    CLOCK: [2019-03-26 Tue 09:02]--[2019-03-26 Tue 10:48] =>  1:46
+    :END:
+
+We've been struggling with a number of problems with emacs, take some
+time to sort them out:
+
+- fonts/icons are not displayed correctly
+- update prelude to latest
+- install treemacs (neotree is not that useful)
+
 *** STARTED Promote extraction entities to meta-model elements        :story:
-:LOGBOOK:
-CLOCK: [2019-03-25 Mon 18:27]--[2019-03-25 Mon 18:41] =>  0:14
-CLOCK: [2019-03-25 Mon 17:27]--[2019-03-25 Mon 18:02] =>  0:35
-CLOCK: [2019-03-25 Mon 16:43]--[2019-03-25 Mon 17:15] =>  0:32
-CLOCK: [2019-03-25 Mon 16:32]--[2019-03-25 Mon 16:42] =>  0:10
-:END:
+    :LOGBOOK:
+    CLOCK: [2019-03-25 Mon 18:27]--[2019-03-25 Mon 18:41] =>  0:14
+    CLOCK: [2019-03-25 Mon 17:27]--[2019-03-25 Mon 18:02] =>  0:35
+    CLOCK: [2019-03-25 Mon 16:43]--[2019-03-25 Mon 17:15] =>  0:32
+    CLOCK: [2019-03-25 Mon 16:32]--[2019-03-25 Mon 16:42] =>  0:10
+    :END:
 
 As with mappings, profiles and templates, we should make modelines,
 modeline groups, licences and location strings meta-model elements
@@ -293,8 +311,6 @@ all models. The main reason for this is that tracer does not support
 IO. There may be other reasons such as the annotations factory and
 annotation expander. We should just add IO support for all types that
 need it and code generate the contexts.
-
-
 
 *** Add "ioable" handcrafted types                                    :story:
 
