--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-01 Mon 11:06]
+#+CAPTION: Clock summary at [2019-04-01 Mon 11:53]
 | <75>                                                      |         |       |      |       |
 | Headline                                                  | Time    |       |      |     % |
 |-----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                              | *35:36* |       |      | 100.0 |
+| *Total time*                                              | *36:22* |       |      | 100.0 |
 |-----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                   | 35:36   |       |      | 100.0 |
-| Active                                                    |         | 35:36 |      | 100.0 |
-| Edit release notes for previous sprint                    |         |       | 1:47 |   5.0 |
-| Sprint and product backlog grooming                       |         |       | 6:11 |  17.4 |
-| Create a video demo for the previous sprint's features    |         |       | 3:11 |   8.9 |
-| Fix issues with emacs                                     |         |       | 2:42 |   7.6 |
-| Create a basic "project plan"                             |         |       | 2:08 |   6.0 |
-| Simplify qualified name                                   |         |       | 3:39 |  10.3 |
-| Rename "language" to "technical space"                    |         |       | 7:22 |  20.7 |
-| Add intrinsic technical space ownership                   |         |       | 1:12 |   3.4 |
-| Promote extraction entities to meta-model elements        |         |       | 6:57 |  19.5 |
-| Move all utility formatters from extraction to generation |         |       | 0:27 |   1.3 |
+| Stories                                                   | 36:22   |       |      | 100.0 |
+| Active                                                    |         | 36:22 |      | 100.0 |
+| Edit release notes for previous sprint                    |         |       | 1:47 |   4.9 |
+| Sprint and product backlog grooming                       |         |       | 6:11 |  17.0 |
+| Create a video demo for the previous sprint's features    |         |       | 3:11 |   8.8 |
+| Fix issues with emacs                                     |         |       | 2:42 |   7.4 |
+| Create a basic "project plan"                             |         |       | 2:08 |   5.9 |
+| Simplify qualified name                                   |         |       | 3:39 |  10.0 |
+| Rename "language" to "technical space"                    |         |       | 7:22 |  20.3 |
+| Add intrinsic technical space ownership                   |         |       | 1:12 |   3.3 |
+| Promote extraction entities to meta-model elements        |         |       | 7:43 |  21.2 |
+| Move all utility formatters from extraction to generation |         |       | 0:27 |   1.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -324,6 +324,7 @@ generation types for full/partial/no generation.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-01 Mon 11:10]--[2019-04-01 Mon 11:53] =>  0:43
     CLOCK: [2019-04-01 Mon 11:06]--[2019-04-01 Mon 11:09] =>  0:03
     CLOCK: [2019-04-01 Mon 10:48]--[2019-04-01 Mon 11:05] =>  0:17
     CLOCK: [2019-04-01 Mon 10:02]--[2019-04-01 Mon 10:47] =>  0:45
