--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-01 Mon 12:00]
+#+CAPTION: Clock summary at [2019-04-01 Mon 12:07]
 | <75>                                                      |         |       |      |       |
 | Headline                                                  | Time    |       |      |     % |
 |-----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                              | *36:28* |       |      | 100.0 |
+| *Total time*                                              | *36:34* |       |      | 100.0 |
 |-----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                   | 36:28   |       |      | 100.0 |
-| Active                                                    |         | 36:28 |      | 100.0 |
+| Stories                                                   | 36:34   |       |      | 100.0 |
+| Active                                                    |         | 36:34 |      | 100.0 |
 | Edit release notes for previous sprint                    |         |       | 1:47 |   4.9 |
-| Sprint and product backlog grooming                       |         |       | 6:11 |  17.0 |
+| Sprint and product backlog grooming                       |         |       | 6:11 |  16.9 |
 | Create a video demo for the previous sprint's features    |         |       | 3:11 |   8.7 |
 | Fix issues with emacs                                     |         |       | 2:42 |   7.4 |
-| Create a basic "project plan"                             |         |       | 2:08 |   5.9 |
+| Create a basic "project plan"                             |         |       | 2:08 |   5.8 |
 | Simplify qualified name                                   |         |       | 3:39 |  10.0 |
-| Rename "language" to "technical space"                    |         |       | 7:22 |  20.2 |
+| Rename "language" to "technical space"                    |         |       | 7:22 |  20.1 |
 | Add intrinsic technical space ownership                   |         |       | 1:12 |   3.3 |
-| Promote extraction entities to meta-model elements        |         |       | 7:49 |  21.4 |
+| Promote extraction entities to meta-model elements        |         |       | 7:55 |  21.6 |
 | Move all utility formatters from extraction to generation |         |       | 0:27 |   1.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -324,6 +324,7 @@ generation types for full/partial/no generation.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-01 Mon 12:01]--[2019-04-01 Mon 12:07] =>  0:06
     CLOCK: [2019-04-01 Mon 11:54]--[2019-04-01 Mon 12:00] =>  0:06
     CLOCK: [2019-04-01 Mon 11:10]--[2019-04-01 Mon 11:53] =>  0:43
     CLOCK: [2019-04-01 Mon 11:06]--[2019-04-01 Mon 11:09] =>  0:03
