--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-01 Mon 14:41]
-| <75>                                                      |         |       |      |       |
-| Headline                                                  | Time    |       |      |     % |
-|-----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                              | *38:13* |       |      | 100.0 |
-|-----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                   | 38:13   |       |      | 100.0 |
-| Active                                                    |         | 38:13 |      | 100.0 |
-| Edit release notes for previous sprint                    |         |       | 1:47 |   4.7 |
-| Sprint and product backlog grooming                       |         |       | 6:11 |  16.2 |
-| Create a video demo for the previous sprint's features    |         |       | 3:11 |   8.3 |
-| Fix issues with emacs                                     |         |       | 2:42 |   7.1 |
-| Create a basic "project plan"                             |         |       | 2:08 |   5.6 |
-| Simplify qualified name                                   |         |       | 3:39 |   9.6 |
-| Rename "language" to "technical space"                    |         |       | 7:22 |  19.3 |
-| Add intrinsic technical space ownership                   |         |       | 1:12 |   3.1 |
-| Promote extraction entities to meta-model elements        |         |       | 9:34 |  25.0 |
-| Move all utility formatters from extraction to generation |         |       | 0:27 |   1.2 |
+#+CAPTION: Clock summary at [2019-04-01 Mon 15:26]
+| <75>                                                      |         |       |       |       |
+| Headline                                                  | Time    |       |       |     % |
+|-----------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                              | *38:57* |       |       | 100.0 |
+|-----------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                   | 38:57   |       |       | 100.0 |
+| Active                                                    |         | 38:57 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  1:47 |   4.6 |
+| Sprint and product backlog grooming                       |         |       |  6:11 |  15.9 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   8.2 |
+| Fix issues with emacs                                     |         |       |  2:42 |   6.9 |
+| Create a basic "project plan"                             |         |       |  2:08 |   5.5 |
+| Simplify qualified name                                   |         |       |  3:39 |   9.4 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  18.9 |
+| Add intrinsic technical space ownership                   |         |       |  1:12 |   3.1 |
+| Promote extraction entities to meta-model elements        |         |       | 10:18 |  26.4 |
+| Move all utility formatters from extraction to generation |         |       |  0:27 |   1.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -324,6 +324,7 @@ generation types for full/partial/no generation.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-01 Mon 14:42]--[2019-04-01 Mon 15:26] =>  0:44
     CLOCK: [2019-04-01 Mon 14:34]--[2019-04-01 Mon 14:41] =>  0:07
     CLOCK: [2019-04-01 Mon 13:01]--[2019-04-01 Mon 14:33] =>  1:32
     CLOCK: [2019-04-01 Mon 12:01]--[2019-04-01 Mon 12:07] =>  0:06
