--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -6,33 +6,33 @@
 * Mission Statement
 
 - Finish work on moving decorations to metamodel.
-- Start work on moving profiles to metamodel.
 
 * Stories
 
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-05 Fri 09:19]
+#+CAPTION: Clock summary at [2019-04-05 Fri 10:01]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *63:57* |       |       | 100.0 |
+| *Total time*                                              | *64:38* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 63:57   |       |       | 100.0 |
-| Active                                                    |         | 63:57 |       | 100.0 |
+| Stories                                                   | 64:38   |       |       | 100.0 |
+| Active                                                    |         | 64:38 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.8 |
-| Sprint and product backlog grooming                       |         |       |  7:07 |  11.1 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   5.0 |
+| Sprint and product backlog grooming                       |         |       |  7:07 |  11.0 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.9 |
 | Fix issues with emacs                                     |         |       |  2:42 |   4.2 |
 | Create a basic "project plan"                             |         |       |  2:08 |   3.3 |
-| Simplify qualified name                                   |         |       |  3:39 |   5.7 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  11.5 |
+| Simplify qualified name                                   |         |       |  3:39 |   5.6 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  11.4 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.9 |
-| Integrate report-ci with dogen                            |         |       |  2:09 |   3.4 |
-| Promote extraction entities to meta-model elements        |         |       | 30:56 |  48.4 |
+| Integrate report-ci with dogen                            |         |       |  2:09 |   3.3 |
+| Promote extraction entities to meta-model elements        |         |       | 30:56 |  47.9 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.7 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   2.0 |
+| Supply decorations as a sttich parameter                  |         |       |  0:41 |   1.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -513,6 +513,24 @@ applied as variables. They should be composed externally with access
 to data from the model element. Thus we then need a way to associate
 includes with model elements. This is captured as a separate story.
 
+*** STARTED Supply decorations as a sttich parameter                  :story:
+     :LOGBOOK:
+     CLOCK: [2019-04-05 Fri 09:20]--[2019-04-05 Fri 10:01] =>  0:41
+     :END:
+
+As explained in other story at present we are creating the decoration
+inside the stitch template. This won't work with new world. We need to
+supply it as KVP. For now we will leave everything else as is.
+
+Notes:
+
+- factor out commonalities between wale and stitch into object
+  template regarding keys.
+- add validation to ensure all expected keys have been found. Look at
+  how that's done in wale.
+- add a way to supply KVPs from the outside world into stitch template
+  instantiation.
+
 *** Associate includes with model elements                            :story:
 
 The right solution for the formatter includes is to supply them as
@@ -574,6 +592,12 @@ when we should use this as opposed to plain stereotypes. The good
 thing about stereotypes is that we make the relationships explicit,
 whereas with =metaclass= we are making them slightly less
 transparent.
+
+*** Stitch extension is hard-coded                                    :story:
+
+At present we have hard-coded the file extension in the output of
+stitch templates as =cpp=. We should really supply it as part of the
+configuration. Ideally even the entire filename.
 
 *** Duplicate elements in model                                       :story:
 
